--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+/*
+@media (min-width: 480px) 
+{
 
 .container
 {
-    display: grid;
-    margin: auto;
-    width: 80%;
-    background-color: #7DC2AD;
-    grid-template-columns: 1fr 1fr;
     grid-template-areas:
     "navbar navbar"
     "header header"
     "projects projects"
     "aboutme aboutme"
-    "contactme contactme"
-    "social social"
+    "contactme social"
     "footer footer";
+} 
+
+.projects
+{
+    grid-area: projects;
+}
+
+}
+*/
+.container
+{
+    display: grid;
+    margin: auto;
+    width: 90%;
+    background-color: #7DC2AD;
+    font-size: 40px;
+    grid-template-areas:
+    "navbar"
+    "header"
+    "projects"
+    "aboutme"
+    "contactme"
+    "social"
+    "footer";
 }
 
 .navbar
@@ -29,6 +50,7 @@
 .button
 {
     text-decoration: none;
+    font-size: 0.8em;
     background-color: white;
     border-radius: 25px;
     border: 1px solid black;
@@ -57,7 +79,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 .aboutme
@@ -97,7 +118,7 @@
 .headercaption
 {
     font-style: italic;
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 a
@@ -110,28 +131,10 @@ body
     background-color: #E27D60;
 }
 
-header, h2, figcaption, p, legend, label, .button
+header, h2, figcaption, p, label, .button
 {
     font-family: 'Montserrat', sans-serif;
 }
-
-h1
-{
-    font-size: 26px;
-    margin: 1%;
-}
-
-h2
-{
-    font-size: 20px;
-    font-weight: bold;
-}
-figcaption, p, legend, label, .button
-{
-    font-size: 16px;
-    font-weight: bold;
-}
-
 
 figure
 {
@@ -140,22 +143,11 @@ figure
     align-items: center;
 }
 
-figcaption
-{
-    max-width: 90%;
-    text-align: center;
-}
-
 img
 {
-    max-width: 90%;
+    max-width: 150%;
 }
 
-p
-{
-    max-width: 90%;
-    text-align: center;
-}
 
 fieldset
 {
@@ -170,3 +162,30 @@ textarea
     height: 150px;
     resize: none;
 }
+
+h1
+{
+    font-size: 1.5em;
+    margin: 1%;
+}
+
+h2
+{
+   font-size: 0.8em;
+}
+
+p
+{
+    font-size: 0.6em;
+    max-width: 90%;
+    text-align: center;
+}
+
+figcaption
+{
+    font-size: 0.8em;
+    max-width: 90%;
+    text-align: center;
+}
+
+
