--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-/*
-@media (min-width: 480px) 
-{
 
-.container
+body
 {
-    grid-template-areas:
-    "navbar navbar"
-    "header header"
-    "projects projects"
-    "aboutme aboutme"
-    "contactme social"
-    "footer footer";
-} 
-
-.projects
-{
-    grid-area: projects;
+    margin: 0;
+    width: 100%;
+    background-color: #e5eaf5;
 }
 
+header, h2, figcaption, p, label, .button
+{
+    font-family: 'Montserrat', sans-serif;
 }
-*/
+
+figure
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img
+{
+    max-width:90%
+}
+
 .container
 {
     display: grid;
     margin: auto;
-    width: 90%;
-    background-color: #7DC2AD;
-    font-size: 40px;
+    width: 90vw;
+    background-color: #a0d2eb;
+    font-size: 32px;
     grid-template-areas:
     "navbar"
     "header"
@@ -43,7 +46,7 @@
     grid-area: navbar;
     display: flex;
     justify-content: space-around;
-    background-color: #E8A87C;
+    background-color: #a0d2eb;
     margin-top: 0px;
 
 }
@@ -62,8 +65,9 @@
 
 .button:hover 
 {
-    background-color: #C38D9E;
+    background-color: #d0bdf4;
 }
+
 .header
 {
     grid-area: header;
@@ -73,12 +77,38 @@
     text-align: center;
 }
 
+.headerheading
+{
+    font-size: 1.5em;
+    margin: 1%;
+    background-color: #d0bdf4;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 5%;
+}
+
+.headersubheading
+{
+    font-size: 1em;
+    font-style: italic;
+    opacity: 0.6;
+}
+
 .projects
 {
     grid-area: projects;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;   
+}
+
+.projectsheading
+{
+    font-size: 1.3em;
+    background-color: #d0bdf4;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 5%;
 }
 
 .aboutme
@@ -87,6 +117,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+   
+}
+
+.aboutmecaption
+{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 95%;
+}
+
+.aboutmeheading
+{
+    font-size: 1.3em;
+    background-color: #d0bdf4;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 5%;
+    
+}
+
+.aboutmetextbox
+{
+    font-size: 1em;
+    text-align: center;
+    width: 95%;
+}
+
+.aboutmetext
+{
+    margin: 2.5%;
 }
 
 .contactme
@@ -95,6 +156,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+}
+
+.contactmeheading
+{
+    font-size: 1.3em;
+    background-color: #d0bdf4;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 5%;
+    
+}
+
+.contactmetext
+{
+    font-size: 1em;
+}
+
+fieldset
+{
+    margin-bottom: 5%;
+    background-color: #d0bdf4;
+    width: 80%;
 }
 
 .social
@@ -104,10 +188,28 @@
     flex-direction: column;
     align-items: center;
 }
+
+.socialheading
+{
+    font-size: 1.3em;
+    background-color: #d0bdf4;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 5%;
+}
+
+.socialtext
+{
+    font-size:1em;
+    width: 100%;
+    text-align: center;
+}
+
 .socialimage
 {
     margin-top: 10px;
 }
+
 .footer
 {
     grid-area: footer;
@@ -115,77 +217,65 @@
     margin-left: 1%;
 }
 
-.headercaption
+.footertext
 {
-    font-style: italic;
-    opacity: 0.6;
+    font-size: 0.7em;
 }
 
 a
 {
     color:black;
 }
-body
+
+.inputdetails
 {
-    margin: 0;
-    background-color: #E27D60;
+    font-size: 40px;
+
 }
 
-header, h2, figcaption, p, label, .button
-{
-    font-family: 'Montserrat', sans-serif;
-}
-
-figure
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-img
-{
-    max-width: 150%;
-}
-
-
-fieldset
-{
-    margin-bottom: 5%;
-    background-color: #E27D60;
-    width: 80%;
-}
-
-textarea
+.inputtext
 {
     width: 95%;
     height: 150px;
+    font-size: 26px;
     resize: none;
 }
 
-h1
+@media screen and (min-width: 981px)
 {
-    font-size: 1.5em;
-    margin: 1%;
-}
 
-h2
+.container
 {
-   font-size: 0.8em;
-}
+    width:80%;
+    display:grid;
+    grid-template-areas:
+    "navbar navbar"
+    "header header"
+    "projects projects"
+    "aboutme aboutme"
+    "contactme social"
+    "footer footer";
+} 
 
-p
+.projectpics
 {
-    font-size: 0.6em;
-    max-width: 90%;
+    display: flex;
+    flex-direction: row;
     text-align: center;
 }
 
-figcaption
+.social
 {
-    font-size: 0.8em;
-    max-width: 90%;
-    text-align: center;
+    margin-right: 5%;
+}
+
+
+.aboutmepics
+{
+    display:flex;
+    flex-direction: row;
+}
+
 }
 
 
