--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+
 body
 {
     margin: 0;
@@ -7,9 +11,10 @@ body
     background-color: #e5eaf5;
 }
 
-header, h2, figcaption, p, label, .button
+header, h2, figcaption, p, label, .navbarbutton, .inputbutton
 {
-    font-family: 'Montserrat', sans-serif;
+    font-family:  'Concert One', cursive;
+    color: #f2f3f4;
 }
 
 figure
@@ -21,16 +26,16 @@ figure
 
 img
 {
-    max-width:90%
+    max-width:90%;
 }
 
 .container
 {
     display: grid;
+    font-size: 3em;
     margin: auto;
-    width: 90vw;
-    background-color: #a0d2eb;
-    font-size: 32px;
+    background-color: #0B7B9E;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-areas:
     "navbar"
     "header"
@@ -45,53 +50,48 @@ img
 {   
     grid-area: navbar;
     display: flex;
-    justify-content: space-around;
-    background-color: #a0d2eb;
-    margin-top: 0px;
-
+    justify-content: space-between;
+    min-width: 280px;
 }
-.button
+
+.navbarbutton
 {
     text-decoration: none;
-    font-size: 0.8em;
-    background-color: white;
-    border-radius: 25px;
-    border: 1px solid black;
-    padding: 1%;
+    font-size: 35%;
+    text-align: center;
+    width: 20%;
+    padding: 3%;
     margin: 1%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    transition-duration: 1s;
+    transition-duration: 2s;
 }
 
-.button:hover 
+.navbarbutton:hover 
 {
-    background-color: #d0bdf4;
+    background-color: #00447C;
 }
 
 .header
 {
     grid-area: header;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
 .headerheading
 {
-    font-size: 1.5em;
+    font-size: 0.8em;
     margin: 1%;
-    background-color: #d0bdf4;
-    border: 1px solid black;
-    border-radius: 25px;
     padding: 5%;
+    line-height: 1;
 }
 
 .headersubheading
 {
-    font-size: 1em;
+    font-size: 0.6em;
     font-style: italic;
-    opacity: 0.6;
+    line-height: 1;
 }
 
 .projects
@@ -102,13 +102,21 @@ img
     align-items: center;   
 }
 
+figcaption
+{
+    margin-bottom: 5%;
+}
+
 .projectsheading
 {
-    font-size: 1.3em;
-    background-color: #d0bdf4;
-    border: 1px solid black;
-    border-radius: 25px;
+    font-size: 0.8em;
     padding: 5%;
+}
+
+.projectpics
+{
+    font-size: 0.6em;
+    text-align: center;
 }
 
 .aboutme
@@ -117,37 +125,27 @@ img
     display: flex;
     flex-direction: column;
     align-items: center;
-   
-}
-
-.aboutmecaption
-{
-    flex-direction: column;
-    align-items: center;
     text-align: center;
-    width: 95%;
+    font-size: 0.8em;
 }
 
 .aboutmeheading
 {
-    font-size: 1.3em;
-    background-color: #d0bdf4;
-    border: 1px solid black;
-    border-radius: 25px;
+    font-size: 1em;
     padding: 5%;
     
 }
 
-.aboutmetextbox
-{
-    font-size: 1em;
-    text-align: center;
-    width: 95%;
-}
-
 .aboutmetext
 {
-    margin: 2.5%;
+    font-size: 0.7em;
+    line-height: 1;
+    margin: 1%;
+}
+
+.aboutmepics
+{
+    font-size: 0.6em;
 }
 
 .contactme
@@ -157,29 +155,39 @@ img
     flex-direction: column;
     align-items: center;
     text-align: center;
+    min-width: 0;
+    margin: 5%;
 }
 
 .contactmeheading
 {
-    font-size: 1.3em;
-    background-color: #d0bdf4;
-    border: 1px solid black;
-    border-radius: 25px;
+    font-size: 0.8em;
     padding: 5%;
     
 }
 
 .contactmetext
 {
-    font-size: 1em;
+    font-size: 0.6em;
+    line-height: 1;
+    margin-bottom: 10%;
 }
 
 fieldset
 {
     margin-bottom: 5%;
-    background-color: #d0bdf4;
     width: 80%;
+    min-width: 0;
+    font-size: 0.7em;
+    background-color: #00447C;
 }
+
+.inputdetails
+{
+    max-width: 80%;
+    min-width: 0;
+}
+
 
 .social
 {
@@ -191,16 +199,14 @@ fieldset
 
 .socialheading
 {
-    font-size: 1.3em;
-    background-color: #d0bdf4;
-    border: 1px solid black;
-    border-radius: 25px;
-    padding: 5%;
+    font-size: 0.8em;
+    padding: 10%;
 }
 
 .socialtext
 {
-    font-size:1em;
+    font-size:0.6em;
+    line-height: 1;
     width: 100%;
     text-align: center;
 }
@@ -229,19 +235,50 @@ a
 
 .inputdetails
 {
-    font-size: 40px;
+    font-size: 1em;
 
 }
 
 .inputtext
 {
     width: 95%;
-    height: 150px;
-    font-size: 26px;
+    height: 3em;
+    font-size: 0.8em;
+    font-family: 'Concert One', cursive;
     resize: none;
 }
 
-@media screen and (min-width: 981px)
+.inputbutton
+{
+    text-decoration: none;
+    font-size: 0.7em;
+    width: 35%;
+    padding-bottom: 2.5%;
+    margin: 1%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition-duration: 1s;
+    background-color:#0B7B9E;
+}
+
+.inputbutton:hover 
+{
+    background-color: #00447C;
+}
+
+@media screen and (max-width: 300px)
+{
+    .navbarbutton
+    {
+        padding: 2%;
+    }
+
+    .inputbutton
+    {
+        font-size: 0.55em;
+    }
+}
+
+@media screen and (min-width: 768px)
 {
 
 .container
@@ -257,18 +294,28 @@ a
     "footer footer";
 } 
 
+.navbarbutton
+{
+    font-size: 0.65em;
+}
+.header
+{
+    width: auto;
+}
+
 .projectpics
 {
     display: flex;
     flex-direction: row;
-    text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.social
+.projectpics > *
 {
-    margin-right: 5%;
+    width: 45%;
+    margin: 1%;
 }
-
 
 .aboutmepics
 {
@@ -276,6 +323,107 @@ a
     flex-direction: row;
 }
 
+.aboutmecaption
+{
+    font-size: 1.2em;
+}
+
+fieldset
+{
+    max-width: 80%;
+    font-size: 0.5em;
+}
+
+.inputdetails
+{
+    max-width: 80%;
+    min-width: 0;
+}
+
+.inputtext
+{
+    width: 80%;
+    height: 50%;
+    font-size: 0.7em;
+}
+
+.inputbutton
+{
+    font-size: 1em;
+    padding: 1% 3% 5% 1%;
+}
+.social
+{
+    margin-right: 10%;
+}
+
+.social a
+{
+    width: 50%;
+}
+}
+
+@media screen and (min-width: 1024px)
+{
+
+.container
+{
+    width:80%;
+    font-size: 3.5em;
+    display:grid;
+    grid-template-columns: 2fr 1fr;
+} 
+
+.projectsheading
+{
+    margin-top: 0;
 }
 
 
+.projectpics
+{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.contactme
+{
+    width: 50vw;
+    margin-top: 0;
+}
+
+.contactmetext
+{
+    padding-right: 5%;
+}
+
+
+.social
+{
+    width: 25vw;
+}
+
+.socialheading
+{
+    font-size: 0.8em;
+    padding: 10%;
+}
+
+.social a
+{
+    width: 80%;
+    padding-left: 20%;
+}
+
+
+fieldset
+{
+    height: 60%;
+}
+
+.inputtext
+{
+   height: 6em;
+}
+
+}
